[package]
name = "canvas-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tower-http = { version = "0.4", features = ["cors", "fs"] }
parking_lot = "0.12"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
